--- a/index.html
+++ b/index.html
@@ -31,5 +31,47 @@
             </div>
         </div>
     </div>
+    <div class="info-container">
+         <h2>Some random information</h2>
+         <div class="info-boxes">
+        <div class="image-container">
+            <div class="image"></div>
+            <div class="text">
+            this is some subtext under an illustration or image
+            </div>
+        </div>
+        <div class="image-container">
+            <div class="image"></div>
+            <div class="text">
+            this is some subtext under an illustration or image
+            </div>
+        </div>
+
+        <div class="image-container">
+            <div class="image"></div>
+            <div class="text">
+            this is some subtext under an illustration or image
+            </div>
+        </div>
+        <div class="image-container">
+            <div class="image"></div>
+            <div class="text">
+            this is some subtext under an illustration or image
+            </div>
+        </div>
+
+    </div>
+    </div>
+    <section class="testimonial-section">
+     <p class="testimonial"><em>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</em>
+     </p>
+     <p class="author">Thor, God of Thunder</p>
+
+    </section>
+    <div class="footer">
+        <div class="copyright">
+            &copy; Copyright @ The Odin Project 2021
+        </div>
+    </div>
 </body>
 </html>
