--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class="right">
             <div class="image-container">
-                <img src="image.jpg" alt="Placeholder image">
+                <img alt="Placeholder image">
             </div>
         </div>
     </div>
@@ -68,6 +68,15 @@
      <p class="author">Thor, God of Thunder</p>
 
     </section>
+    <div class="signup">
+        <div class="signup-quote">
+            <p><strong>Call to action! It's time!</strong></p>
+            <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+       
+            <button class="signupbutton">Sign up</button>
+        
+     </div>
     <div class="footer">
         <div class="copyright">
             &copy; Copyright @ The Odin Project 2021
