Tried to add the background for the image in header

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class="right">
             <div class="image-container">
-                <img alt="Placeholder image">
+                <img alt="This is a placeholder for an image">
             </div>
         </div>
     </div>
@@ -75,7 +75,7 @@
         </div>
             <button class="signupbutton">Sign up</button>
      </div>
-     
+
     <div class="footer">
         <div class="copyright">
             &copy; Copyright @ The Odin Project 2021
